<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="AddQuizViewModel"
            type="com.languages4u.viewmodel.quiz.AddQuizViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_question">

        <ImageView
            android:id="@+id/img_app_logo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:contentDescription="logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/addqestion_et_question"
            android:layout_width="@dimen/questionEtWidth"
            android:layout_height="190dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_pytanie"
            android:hint="@string/dodaj_pytanie_hint"
            android:text="@={AddQuizViewModel.question}"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_app_logo"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/addqestion_et_A"
            android:layout_width="@dimen/answerBtWidth"
            android:layout_height="@dimen/answerBtHeight"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_odpowiedz_2"
            android:hint="@string/odp_A_hint"
            android:inputType="text"
            android:text="@={AddQuizViewModel.answerA}"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addqestion_et_question"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/addqestion_et_B"
            android:layout_width="@dimen/answerBtWidth"
            android:layout_height="@dimen/answerBtHeight"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_odpowiedz_2"
            android:hint="@string/odp_B_hint"
            android:inputType="text"
            android:text="@={AddQuizViewModel.answerB}"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addqestion_et_A"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/addqestion_et_C"
            android:layout_width="@dimen/answerBtWidth"
            android:layout_height="@dimen/answerBtHeight"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_odpowiedz_2"
            android:hint="@string/odp_C_hint"
            android:inputType="text"
            android:text="@={AddQuizViewModel.answerC}"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addqestion_et_B"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/addquestion_tv_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/poprawna_odpowiedz"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addqestion_et_C"
            app:layout_constraintVertical_bias="0.0" />


        <RadioGroup
            android:id="@+id/addquestion_rbg_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addquestion_tv_correct"
            app:layout_constraintVertical_bias="0.10">

            <RadioButton
                android:id="@+id/addquestion_rb_A"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_radio"
                android:checked="true"
                android:text="@string/A"
                android:textColor="@color/colorPrimary"
                android:layout_margin="2dp"
                android:padding="5dp"/>

            <RadioButton
                android:id="@+id/addquestion_rb_B"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_radio"
                android:onClick="@{(v) -> AddQuizViewModel.onRadioBtnCorrectAnswerClicked(v)}"
                android:text="@string/B"
                android:textColor="@color/colorPrimary"
                android:layout_margin="2dp"
                android:padding="5dp"/>

            <RadioButton
                android:id="@+id/addquestion_rb_C"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_radio"
                android:onClick="@{(v) -> AddQuizViewModel.onRadioBtnCorrectAnswerClicked(v)}"
                android:text="@string/C"
                android:textColor="@color/colorPrimary"
                android:layout_margin="2dp"
                android:padding="5dp" />
        </RadioGroup>

        <Button
            android:id="@+id/addquestion_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/smallBtWidth"
            android:layout_height="@dimen/smallBtHeight"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_start"
            android:onClick="@{v -> AddQuizViewModel.onAddQuestionClicked()}"
            android:text="@string/save_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addquestion_rbg_correct"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>