<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="SingInViewModel"
            type="com.languages4u.viewmodel.auth.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/text_login_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="42sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.265"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
            android:id="@+id/edit_login_help"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.21"
            app:layout_constraintTop_toBottomOf="@+id/text_login_app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#00000000" />

        <EditText
            android:id="@+id/edit_login_email"
            android:text="@={SingInViewModel.email}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.052"
            app:layout_constraintTop_toBottomOf="@+id/edit_login_help"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#A6000000"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/EditTextLogin" />

        <EditText
            android:id="@+id/edit_login_password"
            android:text="@={SingInViewModel.password}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.085"
            app:layout_constraintTop_toBottomOf="@+id/edit_login_email"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#A6000000"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/EditTextLogin" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_login_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="#99000000"
            app:cardElevation="10dp"
            app:layout_constraintVertical_bias="0.12"
            app:layout_constraintTop_toBottomOf="@+id/edit_login_password"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:onClick="@{() -> SingInViewModel.onLoginClick()}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_login_anonymously"
            android:onClick="@{() -> SingInViewModel.onLoginAnonymClick()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_anonymously"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"/>

        <TextView
            android:id="@+id/text_login_forgot_password"
            android:onClick="@{() -> SingInViewModel.onForgotPasswordClick()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toBottomOf="@+id/text_login_anonymously"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>