<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="AuthViewModel"
            type="com.languages4u.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_bckg"
        tools:context=".view.MainActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_authorization_facebook"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.68">

            <!--                android:translationZ="90dp" />-->

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:background="@android:color/transparent"
                android:onClick="@{() -> AuthViewModel.onLoginFacebookClick()}"
                android:paddingTop="30dp"
                android:translationZ="0dp"
                app:com_facebook_login_text="" />

            <TextView
                android:id="@+id/login_button_facebook2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_button"
                android:gravity="center|center"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/loguj_fb"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:com_facebook_login_text="@string/loguj_fb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.665" />

        </androidx.cardview.widget.CardView>

<!--        <com.facebook.login.widget.LoginButton-->
<!--            android:id="@+id/login_button_facebook"-->
<!--            style="?android:attr/borderlessButtonStyle"-->
<!--            android:layout_width="325dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:background="@drawable/tlo_btn"-->
<!--            android:gravity="center|center"-->
<!--            android:onClick="@{() -> AuthViewModel.onLoginFacebookClick()}"-->
<!--            android:paddingStart="0dp"-->
<!--            android:paddingEnd="0dp"-->
<!--            android:text="@string/loguj_fb"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold"-->
<!--            app:com_facebook_login_text="@string/loguj_fb"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.488"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.665" />-->

        <Button
            android:id="@+id/btn_zarejestruj"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_start"
            android:gravity="center"
            android:onClick="@{() -> AuthViewModel.onSingUpClick()}"
            android:text="@string/zarejestruj"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.802"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.913" />

        <TextView
            android:id="@+id/txt_masz_konto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masz_konto"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_zaloguj"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.99" />

        <TextView
            android:id="@+id/txt_dolacz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dolacz"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_zarejestruj"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.99" />

        <Button
            android:id="@+id/btn_zaloguj"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_start"
            android:gravity="center"
            android:onClick="@{() -> AuthViewModel.onLoginClick()}"
            android:text="@string/zaloguj"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.913" />

        <Button
            android:id="@+id/login_button_google"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/google_login"
            android:gravity="center|center"
            android:onClick="@{() -> AuthViewModel.onLoginGoogleClick()}"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/loguj_google"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77" />

        <TextView
            android:id="@+id/btn_authorization_anonymously"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="335dp"
            android:layout_height="39dp"
            android:onClick="@{() -> AuthViewModel.onLoginAnonymClick()}"
            android:text="@string/anonimowo"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
